--- a/src/app/_components/home-page/_components/hero-search/hero-search.scss
+++ b/src/app/_components/home-page/_components/hero-search/hero-search.scss
@@ -3,6 +3,7 @@
 .hero-search {
   background: var(--color-purple-secondary);
   border-radius: 24px;
+  max-width: 535px;
 
   &--header {
     position: relative;
