--- a/src/app/_components/home-page/_components/hero/hero.scss
+++ b/src/app/_components/home-page/_components/hero/hero.scss
@@ -3,15 +3,29 @@
 .hero {
   padding-top:125px;
   background: url('../../../../../../public/layout/images/hero-img.webp') no-repeat scroll center right;
+  @include mixins.media-query('max', 'xxxl') {
+    background-size: 55vw auto;
+  }
+  @include mixins.media-query('max', 'xlg') {
+    background-image: url('../../../../../../public/layout/images/hero-img.webp');
+    background-repeat: no-repeat;
+    background-position: right calc(100% - 48px);
+    background-size: 350px auto;
+  }
   .container {
     padding-top:120px;
     padding-bottom: 120px;
-
+    @include mixins.media-query('max', 'xlg') {
+      padding-top:24px;
+      padding-bottom: 320px;
+    }
     h1 {
       color: var(--color-white);
-      @include mixins.fontSize(96);
-      line-height: 100%;
+      @include mixins.fontSize(96, 100%);
       font-weight: 600;
+      @include mixins.media-query('max', 'xlg') {
+        @include mixins.fontSize(52, 64);
+      }
       span {
         color: var(--color-green-800);
         text-transform: uppercase;
@@ -20,8 +34,10 @@
 
     h2 {
       color: var(--color-white);
-      @include mixins.fontSize(24);
-      line-height: 32px;
+      @include mixins.fontSize(24, 32);
+      @include mixins.media-query('max', 'xlg') {
+        @include mixins.fontSize(14, 24);
+      }
     }
   }
 }
