--- a/public/layout/scss/_main.scss
+++ b/public/layout/scss/_main.scss
@@ -61,10 +61,9 @@ h1, h2, h3, h4, h5 {
 }
 
 h2 {
-  @include mixins.fontSize(48);
+  @include mixins.fontSize(48, 56);
   font-weight: 600;
   color: var(--color-black);
-  line-height: 56px;
 }
 
 
