--- a/src/app/_components/home-page/_components/faq/faq.scss
+++ b/src/app/_components/home-page/_components/faq/faq.scss
@@ -6,8 +6,7 @@
   margin: 0 auto;
 
   h2 {
-    @include mixins.fontSize(48);
-    line-height: 56px;
+    @include mixins.fontSize(48, 56);
     font-weight: 600;
   }
 
@@ -31,10 +30,9 @@
 
       &__header {
         font-weight: 500;
-        @include mixins.fontSize(20);
+        @include mixins.fontSize(20, 24);
         color: var(--color-black);
         transition: color 0.3s ease;
-        line-height: 24px;
       }
 
       &__arrow {
@@ -45,8 +43,7 @@
 
       &__body {
         color: #F0E2EF;
-        @include mixins.fontSize(16);
-        line-height: 24px;
+        @include mixins.fontSize(16, 24);
         height: 0;
         overflow: hidden;
         transition: height 0.3s ease;
