--- a/src/app/_components/home-page/_components/hero/hero.html
+++ b/src/app/_components/home-page/_components/hero/hero.html
@@ -7,11 +7,11 @@
       <h2>flexmile - Nowe Auta dla firm w najmie!</h2>
       <h2 class="mb-5">Z niską ratą! Bez wpłaty! Na START!</h2>
       <div class="mb-7">
-        <flexmile-button (clicked)="goToOffer()" label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right" btnClass="mr-3"></flexmile-button>
-        <flexmile-button (clicked)="goToSection('how-it-works')" label="Jak to działa?" color="outline"></flexmile-button>
+        <flexmile-button (clicked)="goToOffer()" label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right" btnClass="mr-3 w-full xlg:w-auto mb-3 xlg:mb-0"></flexmile-button>
+        <flexmile-button (clicked)="goToSection('how-it-works')" label="Jak to działa?" color="outline" btnClass="w-full xlg:w-auto"></flexmile-button>
       </div>
       </div>
-      <div class="xlg:col-5 col-12">
+      <div class="xlg:col-7 col-12 hidden xlg:block">
       <flexmile-hero-search></flexmile-hero-search>
       </div>
     </div>
