--- a/src/app/_components/home-page/home-page.scss
+++ b/src/app/_components/home-page/home-page.scss
@@ -4,8 +4,7 @@
   &--header{
     span{
       color: var(--color-black-700);
-      @include mixins.fontSize(18);
-      line-height: 24px;
+      @include mixins.fontSize(18, 24);
     }
   }
 }
@@ -22,11 +21,10 @@
   }
   h2{
 font-weight: 600;
-    @include mixins.fontSize(48);
-    line-height: 56px;
+    @include mixins.fontSize(48, 56);
   }
   span{
     color: var(--color-black-700);
-    line-height: 24px;
+    @include mixins.fontSize(16, 24);
   }
 }
