--- a/src/app/_components/offer-new/_components/offer-details/offer-details.scss
+++ b/src/app/_components/offer-new/_components/offer-details/offer-details.scss
@@ -7,8 +7,7 @@
   &--description {
     h4{
       font-weight: 500;
-      @include mixins.fontSize(20);
-      line-height: 24px;
+      @include mixins.fontSize(20, 24);
       margin-bottom: 8px;
     }
     span{
@@ -45,8 +44,7 @@
 
       &-header {
         h1 {
-          @include mixins.fontSize(40);
-          line-height: 56px;
+          @include mixins.fontSize(40, 56);
           font-weight: 600;
         }
 
@@ -84,8 +82,7 @@
 
       h3 {
         font-weight: 600;
-        @include mixins.fontSize(24);
-        line-height: 32px;
+        @include mixins.fontSize(24, 32);
       }
 
       span {
@@ -148,8 +145,7 @@
 
   h3 {
     font-weight: 600;
-    @include mixins.fontSize(32);
-    line-height: 40px;
+    @include mixins.fontSize(32, 40);
   }
 
   .technicals {
@@ -166,16 +162,14 @@
         flex-direction: column;
 
         span {
-          @include mixins.fontSize(14);
+          @include mixins.fontSize(14, 24);
           color: var(--color-black-700);
-          line-height: 24px;
           margin-bottom: 4px;
         }
 
         b {
-          @include mixins.fontSize(16);
+          @include mixins.fontSize(16, 24);
           color: var(--color-black);
-          line-height: 24px;
         }
       }
     }
@@ -222,14 +216,12 @@
 
       & > div {
         font-weight: 500;
-        @include mixins.fontSize(20);
-        line-height: 24px;
+        @include mixins.fontSize(20, 24);
       }
 
       ul {
         li {
-          @include mixins.fontSize(16);
-          line-height: 24px;
+          @include mixins.fontSize(16, 24);
           padding-left: 24px;
           margin-bottom: 4px;
           position: relative;
