--- a/src/app/_components/offer-new/_components/offer-order/offer-order.scss
+++ b/src/app/_components/offer-new/_components/offer-order/offer-order.scss
@@ -14,8 +14,7 @@
   .radios {
     label {
       color: #525252;
-      @include mixins.fontSize(14);
-      line-height: 24px;
+      @include mixins.fontSize(14, 24);
     }
   }
 
@@ -53,13 +52,12 @@
       max-width: 640px;
 
       & > h2 {
-        @include mixins.fontSize(48);
-        line-height: 56px;
+        @include mixins.fontSize(48, 56);
       }
 
       & > span {
         color: var(--color-black-700);
-        line-height: 24px;
+        @include mixins.fontSize(16, 24);
         margin-bottom: 32px;
         padding-bottom: 32px;
         display: block;
@@ -100,33 +98,30 @@
           gap: 16px;
 
           b {
-            line-height: 24px;
+            @include mixins.fontSize(16, 24);
             color: var(--color-white);
             font-weight: 600;
           }
 
           span {
-            @include mixins.fontSize(14);
-            line-height: 24px;
+            @include mixins.fontSize(14, 24);
             color: var(--color-white);
           }
         }
       }
 
       .right_id {
-        @include mixins.fontSize(12);
+        @include mixins.fontSize(12, 16);
         color: var(--color-black-700);
-        line-height: 16px;
       }
 
       .right_title {
         font-weight: 600;
-        line-height: 32px;
-        @include mixins.fontSize(24);
+        @include mixins.fontSize(24, 32);
       }
 
       .right_subtitle {
-        line-height: 24px;
+        @include mixins.fontSize(16, 24);
       }
 
       .right_img {
@@ -141,12 +136,10 @@
       .right_price {
         color: var(--p-primary-900);
         font-weight: 600;
-        line-height: 40px;
-        @include mixins.fontSize(32);
+        @include mixins.fontSize(32, 40);
 
         span {
-          @include mixins.fontSize(24);
-          line-height: 32px;
+          @include mixins.fontSize(24, 32);
         }
       }
     }
@@ -171,19 +164,16 @@
 .order-modal {
   .model {
     font-weight: 500;
-    @include mixins.fontSize(20);
-    line-height: 24px;
+    @include mixins.fontSize(20, 24);
   }
 
   .title {
-    @include mixins.fontSize(32);
-    line-height: 40px;
+    @include mixins.fontSize(32, 40);
     font-weight: 600;
   }
 
   span {
     color: var(--color-black-700);
-    @include mixins.fontSize(14);
-    line-height: 24px;
+    @include mixins.fontSize(14, 24);
   }
 }
