--- a/src/app/_components/page-not-found/page-not-found.scss
+++ b/src/app/_components/page-not-found/page-not-found.scss
@@ -11,8 +11,7 @@
     h3{
       color: var(--color-white);
       font-weight: 600;
-      @include mixins.fontSize(120);
-      line-height: 100%;
+      @include mixins.fontSize(120, 100%);
       margin-bottom: 16px;
       position: relative;
       display: inline-block;
@@ -24,13 +23,11 @@
     }
     h4{
       font-weight: 600;
-      line-height: 56px;
-      @include mixins.fontSize(48);
+      @include mixins.fontSize(48, 56);
       margin-bottom: 16px;
     }
     span{
-      line-height: 32px;
-      @include mixins.fontSize(20);
+      @include mixins.fontSize(20, 32);
       margin-bottom: 48px;
       display: block;
     }
