--- a/src/app/_components/utilities/banner-list/banner-list.scss
+++ b/src/app/_components/utilities/banner-list/banner-list.scss
@@ -8,6 +8,9 @@
   &.large{
     padding: 40px 0;
     @include mixins.fontSize(32);
+    @include mixins.media-query('max', 'xxl') {
+      @include mixins.fontSize(24);
+    }
   }
   &.small{
     padding: 27px 0;
@@ -27,6 +30,6 @@
     color: var(--color-green-800);
   }
   &--template{
-    line-height: 32px;
+    @include mixins.fontSize(24, 32);
   }
 }
