--- a/src/app/_components/utilities/contact-form/contact-form.scss
+++ b/src/app/_components/utilities/contact-form/contact-form.scss
@@ -19,8 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  line-height: 18px;
-  @include mixins.fontSize(12)
+  @include mixins.fontSize(12, 18);
 }
 
 .message-sent {
@@ -41,8 +40,7 @@
     color: var(--color-white);
     text-align: center;
     font-weight: 600;
-    line-height: 56px;
-    @include mixins.fontSize(48);
+    @include mixins.fontSize(48, 56);
     padding-top:40px;
     padding-bottom: 24px;
   }
