--- a/src/app/_components/utilities/filters/filters.scss
+++ b/src/app/_components/utilities/filters/filters.scss
@@ -2,8 +2,7 @@
 .filters {
   h3{
     font-weight: 600;
-    @include mixins.fontSize(32);
-    line-height: 40px;
+    @include mixins.fontSize(32, 40);
     color: var(--color-white);
   }
   &__price {
