--- a/src/app/_components/utilities/header/header.html
+++ b/src/app/_components/utilities/header/header.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{'opened' : mobileMenuState, 'header--scrolled py-4': isScrolled, 'py-5': !isScrolled}"
-     class="flex py-4 px-7 align-items-center justify-content-between header">
+     class="flex py-4 px-4 xxxl:px-7 align-items-center justify-content-between header">
   <div class="header--logo">
     <a [routerLink]="'/'">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 317 62" fill="none" class="block">
@@ -29,7 +29,23 @@
     </a>
   </div>
   <div class="flex align-items-center header--nav">
-    <ul class="flex gap-2 align-items-center">
+
+    <div class="mobile-nav flex xl:hidden gap-3">
+        <div class="search">
+          <span>
+            <i class="pi pi-search"></i>
+          </span>
+        </div>
+        <div class="hamburger-menu"  (click)="openMobileMenu()" [ngClass]="{'is-active' : mobileMenuState}">
+          <svg width="24" height="24" viewBox="0 0 24 24">
+            <line class="line line-top" x1="3" y1="6" x2="21" y2="6"></line>
+            <line class="line line-middle" x1="3" y1="12" x2="21" y2="12"></line>
+            <line class="line line-bottom" x1="3" y1="18" x2="21" y2="18"></line>
+          </svg>
+        </div>
+    </div>
+
+    <ul class="desktop-nav gap-1 align-items-start xl:align-items-center xxxl:gap-2" [ngClass]="{'is-open' : mobileMenuState}">
       @for (item of menuElements; track $index) {
         <li>
           @if (item.type === 'url' && item.url) {
@@ -45,13 +61,14 @@
         </li>
       }
       <li>
-        <a href="#" class="social">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+        <a href="#" class="social flex align-items-center justify-content-center">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none" class="block">
             <rect x="1" y="1" width="30" height="30" rx="15" stroke="#C1D342" stroke-width="2"/>
             <path
               d="M22.7812 15.75C22.7812 19.1406 20.293 21.957 17.0391 22.4492V17.7188H18.625L18.9258 15.75H17.0391V14.4922C17.0391 13.9453 17.3125 13.4258 18.1602 13.4258H19.0078V11.7578C19.0078 11.7578 18.2422 11.6211 17.4766 11.6211C15.9453 11.6211 14.9336 12.5781 14.9336 14.2734V15.75H13.2109V17.7188H14.9336V22.4492C11.6797 21.957 9.21875 19.1406 9.21875 15.75C9.21875 12.0039 12.2539 8.96875 16 8.96875C19.7461 8.96875 22.7812 12.0039 22.7812 15.75Z"
               fill="white"/>
           </svg>
+          <span class="flex xl:hidden" >Obserwuj nas na Facebooku!</span>
         </a>
       </li>
     </ul>
