--- a/src/app/_components/utilities/list/nothing-found/nothing-found.scss
+++ b/src/app/_components/utilities/list/nothing-found/nothing-found.scss
@@ -7,8 +7,7 @@
   justify-content: center;
 
   h4 {
-    @include mixins.fontSize(48);
-    line-height: 56px;
+    @include mixins.fontSize(48, 56);
     font-weight: 600;
     text-align: center;
     display: block;
@@ -17,7 +16,6 @@
   }
   span{
     color: var(--color-black-700);
-    @include mixins.fontSize(20);
-    line-height: 32px;
+    @include mixins.fontSize(20, 32);
   }
 }
