--- a/src/app/_components/utilities/reserved-list/reserved-list.scss
+++ b/src/app/_components/utilities/reserved-list/reserved-list.scss
@@ -3,8 +3,7 @@
 .reserved--list {
   padding-bottom: 120px;
   h3 {
-    @include mixins.fontSize(48);
-    line-height: 56px;
+    @include mixins.fontSize(48, 56);
     padding-bottom: 32px;
   }
 
