--- a/src/app/_components/home-page/_components/opinions/opinions.html
+++ b/src/app/_components/home-page/_components/opinions/opinions.html
@@ -1,10 +1,10 @@
 <div class="opinions py-7" id="opinions">
   <div class="container dreams pb-5">
     <div class="grid mt-0">
-      <div class="col-4">
+      <div class="col-12 xlg:col-4">
         <div></div>
       </div>
-      <div class="col-8">
+      <div class="col-12 xlg:col-8">
         <div>
           <div class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="94" height="88" viewBox="0 0 295 273" fill="none">
