--- a/src/app/_components/offer-new/offer-new.scss
+++ b/src/app/_components/offer-new/offer-new.scss
@@ -1,3 +1,10 @@
+@use 'mixins';
 .offer-wrapper{
   padding-top: 125px;
+  @include mixins.media-query('max', 'xxxl') {
+    padding-top: 112px;
+  }
+  @include mixins.media-query('max', 'xl') {
+    padding-top: 104px;
+  }
 }
