--- a/src/app/_components/utilities/offer-gallery/offer-gallery.scss
+++ b/src/app/_components/utilities/offer-gallery/offer-gallery.scss
@@ -354,6 +354,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  img {
+    display: block;
+    max-width: 100%;
+  }
+
 }
 
 // ========================================
