--- a/src/app/_components/home-page/home-page.html
+++ b/src/app/_components/home-page/home-page.html
@@ -28,30 +28,30 @@
     </div>
   </div>
 </div>
-<flexmile-why-us></flexmile-why-us>
-<flexmile-faq></flexmile-faq>
-<flexmile-opinions></flexmile-opinions>
+<!--<flexmile-why-us></flexmile-why-us>-->
+<!--<flexmile-faq></flexmile-faq>-->
+<!--<flexmile-opinions></flexmile-opinions>-->
 
-<div class="add_info py-7">
-  <div class="container">
-    <div class="grid mt-0">
-      <div class="col-6">
-        <div class="_d">
-          <h2 class="pb-4">Odbierz w salonie<br>lub zamów dostawę<br>pod dom!</h2>
-          <span class="block pb-6">
-        Nie trać czasu na formalności czy dojazdy. Z Flexmile wszystko załatwisz online, a samochód odbierzesz tam, gdzie Ci najwygodniej. Współpracujemy z siecią sprawdzonych salonów w całej Polsce, ale jeśli wolisz pełną wygodę – przywieziemy auto pod dom. Bez dodatkowych kosztów, bez stresu, gotowe do jazdy od pierwszej minuty.
-      </span>
-          <div>
-            <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"
-                             btnClass="mr-3"></flexmile-button>
-          </div>
-        </div>
-      </div>
-      <div class="col-6 flex align-items-center justify-content-end">
-        <div class="_img"></div>
-      </div>
-    </div>
-  </div>
-</div>
+<!--<div class="add_info py-7">-->
+<!--  <div class="container">-->
+<!--    <div class="grid mt-0">-->
+<!--      <div class="col-12 xlg:col-6">-->
+<!--        <div class="_d">-->
+<!--          <h2 class="pb-4">Odbierz w salonie<br>lub zamów dostawę<br>pod dom!</h2>-->
+<!--          <span class="block pb-6">-->
+<!--        Nie trać czasu na formalności czy dojazdy. Z Flexmile wszystko załatwisz online, a samochód odbierzesz tam, gdzie Ci najwygodniej. Współpracujemy z siecią sprawdzonych salonów w całej Polsce, ale jeśli wolisz pełną wygodę – przywieziemy auto pod dom. Bez dodatkowych kosztów, bez stresu, gotowe do jazdy od pierwszej minuty.-->
+<!--      </span>-->
+<!--          <div>-->
+<!--            <flexmile-button label="Sprawdź ofertę" iconPosition="right" icon="pi-arrow-right"-->
+<!--                             btnClass="mr-0 xlg:mr-3 w-full xlg:w-auto"></flexmile-button>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-12 xlg:col-6 flex align-items-center justify-content-end">-->
+<!--        <div class="_img"></div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
 <flexmile-player label="Kim jesteśmy?" fileName="dzien_dobry.m4a"></flexmile-player>
