--- a/src/app/_components/maintenance/maintenance.html
+++ b/src/app/_components/maintenance/maintenance.html
@@ -2,7 +2,7 @@
 
   <div>
     <div class="flex justify-content-center mb-6">
-      <svg xmlns="http://www.w3.org/2000/svg" width="203" height="200" viewBox="0 0 203 200" fill="none">
+      <svg xmlns="http://www.w3.org/2000/svg" width="203" height="200" viewBox="0 0 203 200" fill="none" class="ludzik">
         <g clip-path="url(#clip0_1932_176366)">
           <path
             d="M46.461 141.486L19.3885 159.766L10.5955 170.872L3.42188 193.316L54.0952 196.325L73.3008 176.889L53.4019 143.106L46.461 141.486Z"
