--- a/src/app/_components/home-page/_components/faq/faq.html
+++ b/src/app/_components/home-page/_components/faq/faq.html
@@ -1,9 +1,9 @@
-<section class="pb-7 faq" id="faq">
-    <h2 class="pb-7 text-center">Najczęściej zadawane pytania</h2>
+<section class="pb-7 faq container" id="faq">
+    <h2 class="xlg:pb-7 pb-4 text-center">Najczęściej zadawane pytania</h2>
     <div class="faq-list">
       @for (faq of faqObject; let i = $index; track i) {
         <div class="faq-list_item mb-2" [ngClass]="{'expanded' : faq.isExpanded}">
-          <div class="flex lg:align-items-center align-items-start p-4 cursor-pointer" (click)="changeExpandState(i, $event.target)">
+          <div class="flex lg:align-items-center align-items-start p-3 xlg:p-4 cursor-pointer" (click)="changeExpandState(i, $event.target)">
             <div class="flex align-items-center w-full">
               <span class="faq-list_item__header">{{ faq.header }}</span>
               <span class="faq-list_item__arrow ml-auto">
@@ -12,7 +12,7 @@
             </div>
           </div>
           <div class="faq-list_item__body" #questionAnswer [ngStyle]="{ 'height': faq.isExpanded ? faq.contentHeight + 'px' : '0' }">
-            <div class="p-4 pt-0">{{ faq.body }}</div>
+            <div class="p-3 xlg:p-4 pt-0">{{ faq.body }}</div>
           </div>
         </div>
       }
