--- a/src/app/_components/utilities/car/car.scss
+++ b/src/app/_components/utilities/car/car.scss
@@ -42,6 +42,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @include mixins.media-query('max', 'xlg') {
+      padding: 16px 16px 0;
+    }
   }
 
   &.card-large {
@@ -123,11 +126,17 @@
     @include mixins.fontSize(24, 32);
     font-weight: 600;
     color: var(--color-black);
+    @include mixins.media-query('max', 'xlg') {
+      @include mixins.fontSize(24, 32);
+    }
   }
 
   p#{&}__subtitle {
     @include mixins.fontSize(16, 24);
     color: var(--color-black);
+    @include mixins.media-query('max', 'xlg') {
+      @include mixins.fontSize(14, 24);
+    }
   }
 
   &__specs {
@@ -135,6 +144,9 @@
     align-items: center;
     justify-content: flex-start;
     gap: 8px;
+    @include mixins.media-query('max', 'xlg') {
+      flex-wrap: wrap;
+    }
   }
 
   &__spec {
@@ -142,7 +154,7 @@
 
     span {
       color: var(--color-black-600);
-      @include mixins.fontSize(14);
+      @include mixins.fontSize(14, 24);
     }
   }
 
@@ -166,6 +178,14 @@
     gap: 3px;
     display: inline-flex;
     width: auto;
+    @include mixins.media-query('max', 'xlg') {
+      width: auto;
+      cursor: pointer;
+      justify-content: space-between;
+    }
+    @include mixins.media-query('max', 'lg') {
+      width: 100%;
+    }
   }
 
   &__feature-btn {
@@ -179,6 +199,9 @@
 
     &:hover {
       background: var(--color-black-100);
+      @include mixins.media-query('max', 'xlg') {
+        background: unset;
+      }
     }
   }
 
@@ -193,38 +216,104 @@
     will-change: width;
     //  width: 110px;
     width: 0;
+    @include mixins.media-query('max', 'xlg') {
+      width: 75px !important;
+    }
   }
 
-  &:hover:not(.card-large) {
-    .car-card__feature-label {
-      width: 100px;
-      @include mixins.media-query('max', 'xlg') {
-        width: 60px;
+  @include mixins.media-query('min', 'xlg') {
+    &:hover:not(.card-large) {
+      .car-card__feature-label {
+        width: 100px;
+        @include mixins.media-query('max', 'xlg') {
+          width: 60px;
+        }
       }
-    }
 
-    .car-card__content {
-      background: var(--p-primary-900);
-      color: var(--color-white);
-
-      .car-card__title, .car-card__subtitle {
+      .car-card__content {
+        background: var(--p-primary-900);
         color: var(--color-white);
-      }
 
-      .car-card__price {
-        color: var(--color-white);
-      }
-
-      .car-card__spec {
-        span {
+        .car-card__title, .car-card__subtitle {
           color: var(--color-white);
         }
 
-        svg {
-          path {
-            transition: fill 0.3s ease;
-            fill: var(--color-white);
+        .car-card__price {
+          color: var(--color-white);
+        }
+
+        .car-card__spec {
+          span {
+            color: var(--color-white);
           }
+
+          svg {
+            path {
+              transition: fill 0.3s ease;
+              fill: var(--color-white);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@include mixins.media-query('max', 'xlg') {
+  .features_mobile_overlay {
+    position: fixed;
+    z-index: 9998;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+  }
+  .features_mobile {
+    position: fixed;
+    bottom: 0;
+    z-index: 9999;
+    background: var(--color-white);
+    width: 100%;
+    left: 0;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    padding: 16px 24px 0 24px;
+
+    &-header {
+      display: flex;
+      justify-content: space-between;
+
+      .features_mobile-title {
+        padding-bottom: 16px;
+        @include mixins.fontSize(24, 32);
+        font-weight: 600;
+      }
+
+      .features_mobile-hide {
+        height: 32px;
+        width: 32px;
+        cursor: pointer;
+        background-color: var(--color-black-50);
+        border-radius: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+
+    &-list {
+      padding-top: 8px;
+
+      .feature {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 16px;
+        margin-bottom: 24px;
+        span {
+          @include mixins.fontSize(16, 24);
+          font-weight: 500;
         }
       }
     }
